--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+      <canvas id="unity-canvas" width=1080 height=1920 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/test_build_web.loader.js";
+      var loaderUrl = buildUrl + "/Web_build_0.2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/test_build_web.data",
-        frameworkUrl: buildUrl + "/test_build_web.framework.js",
-        codeUrl: buildUrl + "/test_build_web.wasm",
+        dataUrl: buildUrl + "/Web_build_0.2.data",
+        frameworkUrl: buildUrl + "/Web_build_0.2.framework.js",
+        codeUrl: buildUrl + "/Web_build_0.2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "IdleWork",
@@ -94,8 +94,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "1080px";
+        canvas.style.height = "1920px";
       }
 
       loadingBar.style.display = "block";
